<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="giubotta.gbsoft.trazione.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="giubotta.gbsoft.trazione.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="giubotta.gbsoft.trazione.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="giubotta.gbsoft.trazione.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="giubotta.gbsoft.trazione.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="giubotta.gbsoft.trazione.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_chi"
        android:name="giubotta.gbsoft.trazione.ui.Chi.ChiFragment"
        android:label="@string/chi_puo_usare"
        tools:layout="@layout/fragment_chi" />

    <fragment
        android:id="@+id/nav_come"
        android:name="giubotta.gbsoft.trazione.ui.Come.ComeFragment"
        android:label="@string/come_eseguire"
        tools:layout="@layout/fragment_come" />

    <fragment
        android:id="@+id/nav_help"
        android:name="giubotta.gbsoft.trazione.ui.Help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

</navigation>
